--- a/todo/package.json
+++ b/todo/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "expo": "^31.0.2",
+    "link": "^0.1.5",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-material-ui": "^1.30.1",
+    "react-native-vector-icons": "^6.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
